// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapWith string 1`] = `
Object {
  "Layer": "Layer-hash m-fontSize-hash-1",
}
`;

exports[`wrapWith string 2`] = `
Array [
  Array [
    Array [
      Object {
        "media": null,
        "mixins": Array [
          [Function],
        ],
        "root": Array [
          "Layer",
        ],
        "selector": Array [
          ".Layer-hash .Button-hash",
        ],
        "styles": Object {
          "color": "red",
        },
      },
    ],
  ],
  Array [
    Array [
      Object {
        "selector": Array [
          ".m-fontSize-hash-1.Layer-hash .Button-hash",
        ],
        "styles": Object {
          "font-size": "2px",
        },
      },
    ],
  ],
]
`;

exports[`wrapWith string parsed 1`] = `
Object {
  "Layer": Array [
    "Layer-hash",
    "Button-hash m-fontSize-hash-1",
  ],
}
`;

exports[`wrapWith string parsed 2`] = `
Object {
  "Button": "Button-hash m-fontSize-hash-2",
}
`;

exports[`wrapWith string parsed 3`] = `
Array [
  Array [
    Array [
      Object {
        "media": null,
        "mixins": Array [
          [Function],
        ],
        "root": Array [
          "Button",
        ],
        "selector": Array [
          ".Button-hash",
        ],
        "styles": Object {
          "color": "red",
        },
      },
    ],
  ],
  Array [
    Array [
      Object {
        "selector": Array [
          ".m-fontSize-hash-1.Button-hash",
        ],
        "styles": Object {
          "font-size": "10px",
        },
      },
    ],
  ],
  Array [
    Array [
      Object {
        "media": null,
        "mixins": Array [],
        "root": Array [
          "Layer",
        ],
        "selector": ".Layer-hash .PrimaryButton-hash",
        "styles": Object {
          "color": "blue",
        },
      },
    ],
  ],
  Array [
    Array [
      Object {
        "selector": Array [
          ".m-fontSize-hash-2.Button-hash",
        ],
        "styles": Object {
          "font-size": "50px",
        },
      },
    ],
  ],
]
`;
